--- a/displayapp/public/style.css
+++ b/displayapp/public/style.css
@@ -32,3 +32,54 @@
 .w-label {
   color: white;
 }
+.border-blu {
+  --aug-border: initial;
+  --aug-border-all: 2px;
+  --aug-border-bg: var(--hot-blue);
+}
+.ylo-cnt {
+  color: white;
+  /* background: rgb(33,36,0); */
+
+
+  background: linear-gradient(180deg, rgba(33,36,0,0.1) 0%, rgba(31, 121, 9, 0.5) 100%, rgb(12, 93, 1) 10%);
+}
+.ylo-d1-cnt {
+  color: white;
+  background: linear-gradient(180deg, rgba(33,36,0,0.4) 20%, rgba(19, 73, 5, 0.8) 100%, rgb(12, 93, 1) 50%);
+}
+.light-text-3 {
+  color: #fff;
+  font-size: 3vw;
+  font-weight: 100;
+}
+.faded {
+  opacity: 0.15;
+}
+.button-light {
+  font-size: 3vw;
+  font-weight: 100;
+}
+body {
+  --c0-l: var(--media-prefers-light) #257ae4;
+    --c0-l-a: var(--media-prefers-light) rgba(37, 122, 228, 0.25);
+    --c0-l-i: var(--media-prefers-light) gold;
+    --c1-l: var(--media-prefers-light) #fffffd;
+    --c1-l-i: var(--media-prefers-light) #1e1e1c;
+    --c2-l: var(--media-prefers-light) #fdfdfa;
+    --c3-l: var(--media-prefers-light) #e4e4e4;
+    --c4-l: var(--media-prefers-light) #fcfcfa;
+    --c0: var(--c0-l, gold);
+    --c0-a: var(--c0-l-a, rgba(255, 215, 0, 0.25));
+    --c0-i: var(--c0-l-i, #257ae4);
+    --c1: var(--c1-l, #1e1e1c);
+    --c1-i: var(--c1-l-i, #fffffd);
+    --c2: var(--c2-l, #1d1d1b);
+    --c3: var(--c3-l, #2c2c2a);
+    --c4: var(--c4-l, #312d18);
+    --hbl: var(--media-prefers-light) #4039a5;
+    --hot-blue: var(--hbl, #b1ffff);
+    --hot-red: #ff604d;
+    --hot-green: #b9ffb1;
+    --zi-def: #49FF18;
+}
